# Homework

./: BigInt.cpp  BigInt.h  CMakeLists.txt  main.cpp
BigInt/: BigInt.cpp  BigInt.h  main.cpp
Geometry/: geometry.cpp  geometry.h  main.cpp
Matrix/: main.cpp
Rational/: Rational.cpp  Rational.h  main.cpp
